# tazel

./: .gitignore  .gitmodules  CMakeLists.txt  LICENSE.BSD  flake.nix
cmake/: FindSLANGC.cmake
sandbox/: CMakeLists.txt
sandbox/src/: SandboxApp.cpp
scripts/: gen_slang_shader.py
tazel/: CMakeLists.txt
tazel/include/: Tazel.hpp
tazel/include/Platform/SDL/: SDLFrame.hpp  SDLInstance.hpp  SDLPass.hpp  SDLRenderer.hpp  SDLRendererAPI.hpp  SDLTexture.hpp  SDLWindow.hpp
tazel/include/Tazel/: Application.hpp  EntryPoint.hpp  Layer.hpp  LayerStack.hpp  Window.hpp
tazel/include/Tazel/Base/: Application.hpp  Base.h  EntryPoint.hpp  Log.hpp  Window.hpp
tazel/include/Tazel/Events/: ApplicationEvent.hpp  Event.hpp  KeyEvent.hpp  MouseEvent.hpp
tazel/include/Tazel/Layers/: Layer.hpp  LayerStack.hpp
tazel/include/Tazel/Renderer/: GraphicsInstance.hpp  RenderPass.hpp  RenderTexture.hpp  Renderer.hpp  RendererAPI.hpp  RendererFrame.hpp
tazel/shader/: Basic.slang
tazel/src/Platform/SDL/: SDLFrame.cpp  SDLInstance.cpp  SDLPass.cpp  SDLRenderer.cpp  SDLRendererAPI.cpp  SDLTexture.cpp  SDLWindow.cpp
tazel/src/Tazel/: Application.cpp  Layer.cpp  LayerStack.cpp  Log.cpp
tazel/src/Tazel/Base/: Application.cpp  Log.cpp
tazel/src/Tazel/Layers/: Layer.cpp  LayerStack.cpp
tazel/src/Tazel/Renderer/: GraphicsInstance.cpp  Renderer.cpp  RendererAPI.cpp
